[package]
name = "rust-http-to-https-letsencrypt-acme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-web-server = "5.0.0"
rcgen = "0.10.0"
openssl = { version="0.10.42", features = ["vendored"] }

