[package]
name = "http-to-https-letsencrypt"
version = "8.0.6"
authors = ["Bohdan Tsap <bohdan.tsap@tutanota.com>"]
repository = "https://github.com/bohdaq/rust-http-to-https-letsencrypt-acme"
description = "http-to-https-letsencrypt is an application web-server for making permanent redirects from http to https."
edition = "2021"
license = "MIT OR Apache-2.0 OR ISC OR LGPL-3.0-or-later OR CC-BY-4.0"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-web-server = "8.0.6"